# BarnesHutSimulation

./: Cargo.toml  README.md  todo.txt
benches/: benchmark.rs  benchmark_drawing.rs
src/: bh_runner.rs  body.rs  canvas.rs  graveyard.txt  gravity.rs  lib.rs  main.rs  octree.rs  quadtree.rs  simulation.rs
