[package]
name = "barnes_hut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
tokio = "1.37.0"
fastrand = "2.1.0"
deepsize = "0.2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false